--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <li class="relative" data-aos="fade-up" data-aos-delay="100">
             <div class="md:grid md:grid-cols-12 md:gap-8 items-start">
               <div class="md:col-span-5 md:text-right">
-                <div class="text-sm text-gray-500">2023 – Present</div>
+                <div class="text-sm text-gray-500">2023 – Feb 2025</div>
                 <div class="font-semibold">Assistant Professor</div>
                 <div class="text-sm">Magarpatta College of Hospitality, Pune</div>
               </div>
@@ -453,3 +453,4 @@
   </script>
 </body>
 </html>
+
