--- a/index.html
+++ b/index.html
@@ -87,7 +87,38 @@
       </div>
     </div>
   </header>
+<header class="fixed top-0 left-0 right-0 z-50 bg-white/70 dark:bg-gray-900/70 backdrop-blur-lg">
+  <div class="max-w-7xl mx-auto px-4 flex justify-between items-center py-3">
+    <h1 class="text-lg font-bold">Jayant Lohar</h1>
 
+    <!-- Desktop Nav -->
+    <nav class="hidden md:flex gap-6">
+      <a href="#about" class="hover:text-blue-500">About</a>
+      <a href="#skills" class="hover:text-blue-500">Skills</a>
+      <a href="#projects" class="hover:text-blue-500">Projects</a>
+      <a href="#contact" class="hover:text-blue-500">Contact</a>
+    </nav>
+
+    <!-- Mobile Hamburger -->
+    <button id="menuToggle" class="md:hidden focus:outline-none">
+      <i data-lucide="menu" class="w-6 h-6"></i>
+    </button>
+  </div>
+
+  <!-- Mobile Menu -->
+  <nav id="mobileMenu" class="hidden flex-col bg-white dark:bg-gray-900 px-6 pb-4 md:hidden">
+    <a href="#about" class="py-2 border-b">About</a>
+    <a href="#skills" class="py-2 border-b">Skills</a>
+    <a href="#projects" class="py-2 border-b">Projects</a>
+    <a href="#contact" class="py-2">Contact</a>
+  </nav>
+</header>
+
+<script>
+  document.getElementById("menuToggle").addEventListener("click", () => {
+    document.getElementById("mobileMenu").classList.toggle("hidden");
+  });
+</script>
   <main id="home" class="pt-28">
     <!-- ===== Hero ===== -->
     <section class="relative overflow-hidden">
@@ -453,4 +484,5 @@
   </script>
 </body>
 </html>
+
 
